--- a/osrs/Dockerfile
+++ b/osrs/Dockerfile
@@ -6,11 +6,7 @@ RUN apt-get update && apt-get install -y \
     default-jre \
     wget
 
-# TODO: At the present time (04/17/2022),
-# https://github.com/runelite/launcher/releases/latest/download/RuneLite.jar
-# is broken. When the RuneLite team fixes the issue, you may want to correct
-# the RUNELITE_URL so that it grabs the latest release.
-ENV RUNELITE_URL="https://github.com/runelite/launcher/releases/download/2.4.2/RuneLite.jar"
+ENV RUNELITE_URL="https://github.com/runelite/launcher/releases/latest/download/RuneLite.jar"
 ADD runelite /usr/local/bin
 RUN wget $RUNELITE_URL -P /usr/local/bin    \
     && chmod +x /usr/local/bin/RuneLite.jar \
